--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,13 @@ flake8==3.9.2
 mccabe==0.6.1
 pycodestyle==2.7.0
 pyflakes==2.3.1
+
+#Deps do pytest
+toml==0.10.2
+py==1.10.0
+pluggy==1.0.0
+iniconfig==1.1.1
+attrs==21.2.0
+atomicwrites==1.4.0
+pytest==6.2.5
 -r requirements.txt
